<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImagesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnStop"
            tools:listitem="@layout/image_item"/>

    <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnStop"
            app:layout_constraintBottom_toTopOf="@+id/btnResume"
            android:text="@string/start"
            tools:text="1"
    />
    <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/btnPause"
            app:layout_constraintLeft_toRightOf="@id/btnStart"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/stop"
            tools:text="2"
    />
    <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnClear"
            app:layout_constraintLeft_toRightOf="@+id/btnStop"
            android:text="@string/pause"
            tools:text="3"/>
    <Button
            android:id="@+id/btnResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/btnClear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/resume"
            tools:text="4"
    />
    <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btnResume"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/clear"
            tools:text="5"
    />
    <!--<androidx.constraintlayout.widget.Group-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/group"-->
    <!--app:constraint_referenced_ids="btnResume,btnPause,btnStop,btnStart,btnClear"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>